--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
      <!-- Logo and Navigation -->
     <header class="header">
-        <h1><a href="/">Hori<span class="seo">seo</span>n</a></h1>
+        <h1><a href="./index.html">Hori<span class="seo">seo</span>n</a></h1>
         <nav>
             <ul>
                 <li>
